{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 7,
  "lineage": "30b10e7e-dcb2-20bd-0727-e5b1bef6683d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141330218853:loadbalancer/net/my-nlb/4cdbab54e8c36332",
            "arn_suffix": "net/my-nlb/4cdbab54e8c36332",
            "dns_name": "my-nlb-4cdbab54e8c36332.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:141330218853:loadbalancer/net/my-nlb/4cdbab54e8c36332",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "my-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-074d384774bfc4b40"
              },
              {
                "subnet_id": "subnet-0fdd0dd87a683963c"
              }
            ],
            "subnets": [
              "subnet-074d384774bfc4b40",
              "subnet-0fdd0dd87a683963c"
            ],
            "vpc_id": "vpc-0158e9502a72fe166",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141330218853:listener/net/my-nlb/4cdbab54e8c36332/4e2d00a57e1a1ac9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:141330218853:targetgroup/my-target-group/7e7adb5eeea57329",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141330218853:listener/net/my-nlb/4cdbab54e8c36332/4e2d00a57e1a1ac9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:141330218853:loadbalancer/net/my-nlb/4cdbab54e8c36332",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nlb",
            "aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141330218853:targetgroup/my-target-group/7e7adb5eeea57329",
            "arn_suffix": "targetgroup/my-target-group/7e7adb5eeea57329",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141330218853:targetgroup/my-target-group/7e7adb5eeea57329",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0158e9502a72fe166"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:141330218853:targetgroup/my-target-group/7e7adb5eeea57329-20240911133221907000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:141330218853:targetgroup/my-target-group/7e7adb5eeea57329",
            "target_id": "i-0f5566fb146579346"
          },
          "dependencies": [
            "aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:141330218853:targetgroup/my-target-group/7e7adb5eeea57329-20240911133221966800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:141330218853:targetgroup/my-target-group/7e7adb5eeea57329",
            "target_id": "i-0c10b10d32a315c59"
          },
          "dependencies": [
            "aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_nlb_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-797937748",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02a18275ff7e54631",
            "security_group_rule_id": "sgr-04ebd1c9bd285baae",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}